Lab/cn2/lab_exercise/lab1/lab1_client1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: client1
spec:
  containers:
  - name: webserver
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: Always 
    securityContext:
      privileged: true
    readinessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
  nodeName: node1
---
apiVersion: v1
kind: Pod
metadata:
  name: client2
spec:
  containers:
  - name: webserver
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: Always 
    securityContext:
      privileged: true
  nodeName: node2
  
---
apiVersion: v1
kind: Pod
metadata:
  name: client3
spec:
  containers:
  - name: webserver
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: Always 
    securityContext:
      privileged: true
  nodeName: node3
