Lab/cn2/lab_exercise/lab1/lab1_pod1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: c1
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: IfNotPresent 
  - name: c2
    image: 172.16.14.10:5000/webserver8080:0.1
    imagePullPolicy: IfNotPresent
