Lab/cn2/lab_exercise/lab1/lab1_pod2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  volumes:
  - name: nfs1
    nfs:
      server: 172.16.11.14
      path: /media/nfsshare/webserver
  containers:
  - name: c1
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: IfNotPresent 
  - name: c2
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: nfs1
      mountPath: /workingdir
